--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-contrib-concat": "^0.5.1",
-    "grunt-contrib-uglify": "^0.10.1"
+    "grunt-contrib-uglify": "^0.10.1",
+    "grunt-contrib-watch": "^1.0.0",
+    "grunt-forever": "^0.4.7"
   }
 }
